--- a/package.json
+++ b/package.json
@@ -20,7 +20,14 @@
     "bootstrap": "^5.0.2",
     "gatsby": "^2.32.13",
     "gatsby-image": "^3.10.0",
+    "gatsby-link": "^3.10.0",
+    "gatsby-plugin-manifest": "^3.10.0",
+    "gatsby-plugin-offline": "^4.10.0",
+    "gatsby-plugin-react-helmet": "^4.10.0",
     "gatsby-plugin-sass": "^3.2.0",
+    "gatsby-plugin-sharp": "^3.10.2",
+    "gatsby-react-router-scroll": "^4.10.0",
+    "gatsby-transformer-sharp": "^3.10.0",
     "nanoid": "^3.1.23",
     "react": "^17.0.1",
     "react-bootstrap": "^1.6.1",
